<resources>
    <string name="app_name">HolaEats</string>
    <string name="txttitulolgo">Inicio de sesión</string>
    <string name="hintusuario">Ingrese su usuario</string>
    <string name="hintcontrasenia">Ingrese su contraseña</string>
    <string name="btniniciar_sesion">Iniciar sesión</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="txttituloregistro">Registrarse</string>
    <string name="cedula_txt">Cedula:</string>
    <string name="nombretxt">Nombre:</string>
    <string name="apellidotxtx">Apellido:</string>
    <string name="correotxt">Correo:</string>
    <string name="direcciontxt">Direccion:</string>
    <string name="telefonotxt">Telefono:</string>
    <string name="contraseniatxt">Contraseña:</string>
    <string name="confirmartxt">Confirmar\ncontraseña:</string>
    <string name="btnregistrarsesion">Registrarse</string>
    <string name="btncancelar">Cancelar</string>
    <string name="confirmarpedidotxtx">¡ORDEN\nCONFIRMADA!</string>
    <string name="descripciontxtx">¡Su orden esta próxima a llevarse,\n espere a nuestro repartidor!</string>
    <string name="btnkisto">¡LISTO!</string>
    <string name="cancelarpedidotxtx">¡ORDEN\nRECHAZADA!</string>
    <string name="descripcion2txt">¡Usted ha rechazado o\n cancelado el pedido!</string>
    <string name="btncancelarpedido">¡VOLVER AL INICIO!</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="histrialpedido">Historial de Pedidos</string>
    <string name="controlpedidos">Control de Pedidos</string>
    <string name="terminos">Terminos y condiciones</string>
    <string name="politica">Politica de Privacidad</string>
    <string name="actualizar_perfil">ACTUALIZAR PERFIL</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="cuenta_y_perfil">Cuenta y Perfil</string>
    <string name="textviewapellido">TextViewApellido</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n">Dirección</string>
    <string name="viewcorreo">viewCorreo</string>
    <string name="textview">TextView</string>
    <string name="apellido">Apellido</string>

    <string name="textviewnombre">TextViewNombre</string>
    <string name="viewdireccion">viewDireccion</string>
    <string name="viewtelefono">viewTelefono</string>
</resources>